# TmallShoppingFestival

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Codes/: main.cpp  tools.cpp  tools.h
Codes/AfterSale/: AfterSale.cpp  AfterSale.h  makeComment.h
Codes/Criteria/: criteria.cpp  criteria.h
Codes/Filter/: filter.cpp  filter.h
Codes/Mediator/: mediator.cpp  mediator.h
Codes/Order/: balance.cpp  balance.h  checkOrder.cpp  checkOrder.h  order.cpp  order.h  orderState.cpp  orderState.h  orderstate.h  payment.cpp  payment.h
Codes/Page/: page.cpp  page.h
Codes/PersonalInformation/: Comment.cpp  Comment.h  SearchEngine.cpp  SearchEngine.h  customer.cpp  customer.h  payment.h
Codes/Shop/: brand.h  clothingAbstractFactory.h  clothingGoodsFactory.h  commentList.h  coupon.cpp  coupon.h  goods.cpp  goods.h  phoneBuilder.h  shop.cpp  shop.h
Codes/ShoppingCart/: shoppingCart.cpp  shoppingCart.h
Codes/User/: user.cpp  user.h  userSet.cpp
Codes/Venue/: venue.cpp  venue.h
Documents/: AbstractFactory.mdj  BasicClassDiagram.mdj  答辩ppt.pptx
Order/: order.h
